Refactor response handling and service tests